--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 anguage: ruby
-script: "bundle exec rake db:drop db:create db:migrate"
+script: "bundle exec rake db:drop db:create db:migrate test"
 rvm:
   - "2.0.0"
 env:
